--- a/Swift_SweetSugar/Swift_SweetSugar/TestVC/CoreAnimation/MMLayerAnimationVC.xib
+++ b/Swift_SweetSugar/Swift_SweetSugar/TestVC/CoreAnimation/MMLayerAnimationVC.xib
@@ -44,7 +44,7 @@
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NXJ-I5-PHw">
-                    <rect key="frame" x="10" y="124" width="394" height="30"/>
+                    <rect key="frame" x="10" y="304" width="394" height="30"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="X7F-3O-bFW">
                             <rect key="frame" x="20" y="0.0" width="354" height="30"/>
@@ -68,24 +68,32 @@
                     </constraints>
                 </view>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="0In-Vg-ODz">
-                    <rect key="frame" x="10" y="352" width="200" height="200"/>
+                    <rect key="frame" x="10" y="532" width="200" height="200"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="200" id="0sA-1W-svq"/>
                         <constraint firstAttribute="height" constant="200" id="sQo-7L-a0e"/>
                     </constraints>
                     <imageReference key="image" image="ic_search"/>
                 </imageView>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="V4R-Lg-slC">
+                    <rect key="frame" x="10" y="114" width="100" height="53"/>
+                    <color key="backgroundColor" systemColor="systemBlueColor"/>
+                </view>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
+                <constraint firstItem="V4R-Lg-slC" firstAttribute="top" secondItem="uyQ-4R-AML" secondAttribute="bottom" constant="10" id="0ux-65-IhA"/>
+                <constraint firstItem="V4R-Lg-slC" firstAttribute="height" secondItem="uyQ-4R-AML" secondAttribute="height" multiplier="1.06" id="RmU-h3-0Rp"/>
                 <constraint firstItem="0In-Vg-ODz" firstAttribute="top" secondItem="NXJ-I5-PHw" secondAttribute="bottom" constant="198" id="WrK-1d-EYV"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="NXJ-I5-PHw" secondAttribute="trailing" constant="10" id="XM3-P1-aTP"/>
+                <constraint firstItem="V4R-Lg-slC" firstAttribute="width" secondItem="uyQ-4R-AML" secondAttribute="width" id="dVL-w3-xhn"/>
                 <constraint firstItem="uyQ-4R-AML" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="10" id="htN-yp-vWI"/>
                 <constraint firstItem="NXJ-I5-PHw" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="10" id="nlj-9d-GuA"/>
+                <constraint firstItem="V4R-Lg-slC" firstAttribute="leading" secondItem="uyQ-4R-AML" secondAttribute="leading" id="obZ-0q-U9j"/>
                 <constraint firstItem="0In-Vg-ODz" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="10" id="rDJ-wW-198"/>
                 <constraint firstItem="uyQ-4R-AML" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="10" id="y3B-j1-ANG"/>
-                <constraint firstItem="NXJ-I5-PHw" firstAttribute="top" secondItem="uyQ-4R-AML" secondAttribute="bottom" constant="20" id="ydu-hg-ili"/>
+                <constraint firstItem="NXJ-I5-PHw" firstAttribute="top" secondItem="uyQ-4R-AML" secondAttribute="bottom" constant="200" id="ydu-hg-ili"/>
             </constraints>
             <point key="canvasLocation" x="131.8840579710145" y="90.401785714285708"/>
         </view>
@@ -94,6 +102,9 @@
         <image name="ic_search" width="28" height="28"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemBlueColor">
+            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemGreenColor">
             <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
