--- a/Swift_SweetSugar/Swift_SweetSugar/TestVC/Graphic/MMGraphicViewController.xib
+++ b/Swift_SweetSugar/Swift_SweetSugar/TestVC/Graphic/MMGraphicViewController.xib
@@ -12,6 +12,10 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="MMGraphicViewController" customModule="Swift_SweetSugar" customModuleProvider="target">
             <connections>
                 <outlet property="imageV" destination="CuV-4A-mh8" id="rCH-RG-SyY"/>
+                <outlet property="leftIntpu" destination="9aF-vh-Ukc" id="PQB-7U-Vne"/>
+                <outlet property="lineWidthInput" destination="TsD-wB-6p7" id="rg0-93-PK5"/>
+                <outlet property="rightInput" destination="XUC-I8-8Kb" id="hcg-iU-YIN"/>
+                <outlet property="topContainerView" destination="3cH-75-smf" id="6cI-jW-fqF"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -21,23 +25,64 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="CuV-4A-mh8">
-                    <rect key="frame" x="10" y="54" width="394" height="798"/>
+                    <rect key="frame" x="10" y="54" width="40" height="33"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="40" id="RpC-t7-dfL"/>
+                        <constraint firstAttribute="height" constant="33" id="YHr-B0-FsU"/>
+                    </constraints>
                 </imageView>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3cH-75-smf">
+                    <rect key="frame" x="8" y="95" width="398" height="50"/>
+                    <color key="backgroundColor" systemColor="systemGray5Color"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="50" id="Z3f-fV-HKB"/>
+                    </constraints>
+                </view>
+                <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="WAf-MC-k6Z">
+                    <rect key="frame" x="10" y="387" width="394" height="34"/>
+                    <subviews>
+                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="1" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="TsD-wB-6p7">
+                            <rect key="frame" x="0.0" y="0.0" width="126" height="34"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
+                        </textField>
+                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="2" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9aF-vh-Ukc">
+                            <rect key="frame" x="134" y="0.0" width="126" height="34"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
+                        </textField>
+                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="6" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="XUC-I8-8Kb">
+                            <rect key="frame" x="268" y="0.0" width="126" height="34"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
+                        </textField>
+                    </subviews>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="34" id="bk0-ft-hog"/>
+                    </constraints>
+                </stackView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
-                <constraint firstItem="CuV-4A-mh8" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="10" id="0hz-SM-8Pf"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="CuV-4A-mh8" secondAttribute="bottom" constant="10" id="GIJ-K2-s1Q"/>
-                <constraint firstItem="CuV-4A-mh8" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="10" id="RDK-8h-WqF"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="CuV-4A-mh8" secondAttribute="trailing" constant="10" id="UiI-tg-pxn"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="WAf-MC-k6Z" secondAttribute="trailing" constant="10" id="Hf4-Hf-ep9"/>
+                <constraint firstItem="WAf-MC-k6Z" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="10" id="Ms5-zG-JnH"/>
+                <constraint firstItem="CuV-4A-mh8" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="10" id="Nbu-Pq-aSB"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="3cH-75-smf" secondAttribute="trailing" constant="8" id="Xt3-YH-ACS"/>
+                <constraint firstItem="3cH-75-smf" firstAttribute="top" secondItem="CuV-4A-mh8" secondAttribute="bottom" constant="8" symbolic="YES" id="tZN-oI-xvX"/>
+                <constraint firstItem="3cH-75-smf" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="8" id="tjQ-hu-vGu"/>
+                <constraint firstItem="CuV-4A-mh8" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="10" id="wWd-nI-E6C"/>
+                <constraint firstItem="WAf-MC-k6Z" firstAttribute="top" secondItem="3cH-75-smf" secondAttribute="bottom" constant="242" id="x1N-PP-H4C"/>
             </constraints>
-            <point key="canvasLocation" x="132" y="51"/>
+            <point key="canvasLocation" x="131.8840579710145" y="50.892857142857139"/>
         </view>
     </objects>
     <resources>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGray5Color">
+            <color red="0.89803921568627454" green="0.89803921568627454" blue="0.91764705882352937" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
